--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "dependencies": {
     "lodash": "^4.17.11",
     "nodemon": "^1.19.1",
-    "underscore": "^1.9.1"
+    "underscore": "^1.9.1",
+    "underscroe": "0.0.1-security"
   }
 }
